Administratix folder toegevoegd met APP_CODE
DAL,BLL,MODEL klassen toegevoegd aan Administratix=>App_Code

--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -75,6 +75,9 @@
     <Content Include="App_Code\Moodle\BLL.cs" />
     <Content Include="App_Code\Moodle\DAL.cs" />
     <Content Include="App_Code\Moodle\Model.cs" />
+    <Content Include="App_Code\Administratix\DAL.cs" />
+    <Content Include="App_Code\Administratix\BLL.cs" />
+    <Content Include="App_Code\Administratix\Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
