--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -85,6 +85,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Assignments.cshtml" />
+    <Content Include="LesRooster.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
