--- a/Code/Test/CVO-Mobile/CVO-Mobile/bin/CVO-Mobile.dll.config
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/bin/CVO-Mobile.dll.config
@@ -20,5 +20,10 @@
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
   </appSettings>
+  <connectionStrings>
+    <remove name="MobileCVO" />
+    <add name="MobileCVO" connectionString="Server=92.222.220.213,1501;Database=Administratix_cursist;Uid=sa;Pwd=Boerderijm1n#s;" />
+ </connectionStrings>
+
  
 </configuration>
