lessenrooster tonen bugs fixes
DAL-BLL-Model-View opgeschoond en verbeterd

--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -86,7 +86,7 @@
     </Content>
     <Content Include="Assignments.cshtml" />
     <Content Include="LesRooster.cshtml" />
-    <Content Include="Resulaten.cshtml" />
+    <Content Include="Resultaten.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
