Added test pages
Added test pages for:
-DelibiratieDate
-StatusTraject
Rest will be added as tables get linked

--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -87,6 +87,9 @@
     <Content Include="Assignments.cshtml" />
     <Content Include="LesRooster.cshtml" />
     <Content Include="Resultaten.cshtml" />
+    <Content Include="TweedezitResultaat.cshtml" />
+    <Content Include="StatusTraject.cshtml" />
+    <Content Include="DelibiratieDate.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
