--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -90,6 +90,7 @@
     <Content Include="TweedezitResultaat.cshtml" />
     <Content Include="StatusTraject.cshtml" />
     <Content Include="DelibiratieDate.cshtml" />
+    <Content Include="Upate TweedeZit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
