--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -85,6 +85,7 @@
     <Content Include="Styles\App.css" />
     <Content Include="Styles\MoodleTest.css" />
     <Content Include="Styles\Site.css" />
+    <Content Include="Styles\TestFile.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -115,6 +116,8 @@
     <Content Include="Shared\_Header.cshtml" />
     <Content Include="Shared\_Layout.cshtml" />
     <Content Include="Shared\_Nav.cshtml" />
+    <Content Include="TestPageDropDown.cshtml" />
+    <Content Include="Feestdagen.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
