--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -112,6 +112,7 @@
     <Content Include="Deelpagina%27s\TrajectOverzicht.cshtml" />
     <Content Include="Deelpagina%27s\Deadlines.cshtml" />
     <Content Include="Deelpagina%27s\Lessenrooster.cshtml" />
+    <Content Include="Deelpagina%27s\LessenRoosterVMo.cshtml" />
     <None Include="Evenementen.cshtml" />
     <Content Include="MasterPageTestPage.cshtml" />
     <Content Include="Shared\_Footer.cshtml" />
