Evenementen naar deelpagina maar nog niet function
Evenementen naar deelpagina maar nog niet functioneel.
NullreferenceException krijg ik als fout

--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -113,6 +113,7 @@
     <Content Include="Deelpagina%27s\Deadlines.cshtml" />
     <Content Include="Deelpagina%27s\Lessenrooster.cshtml" />
     <Content Include="Deelpagina%27s\LessenRoosterVMo.cshtml" />
+    <Content Include="Deelpagina%27s\Evenementen.cshtml" />
     <None Include="Evenementen.cshtml" />
     <Content Include="MasterPageTestPage.cshtml" />
     <Content Include="Shared\_Footer.cshtml" />
