--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -114,6 +114,8 @@
     <Content Include="Deelpagina%27s\Lessenrooster.cshtml" />
     <Content Include="Deelpagina%27s\LessenRoosterVMo.cshtml" />
     <Content Include="Deelpagina%27s\Evenementen.cshtml" />
+    <Content Include="Deelpagina%27s\ExamenData.cshtml" />
+    <Content Include="Deelpagina%27s\ExamenPunten.cshtml" />
     <None Include="Evenementen.cshtml" />
     <Content Include="MasterPageTestPage.cshtml" />
     <Content Include="Shared\_Footer.cshtml" />
