evenementen & examendata clean up
deelpagina's evenementen & examendata opgemaakt met css3 en div's
geplaatst.

--- a/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/CVO-Mobile.csproj
@@ -104,7 +104,7 @@
     <Content Include="Deelpagina%27s\Lessenrooster.cshtml" />
     <Content Include="Deelpagina%27s\Evenementen.cshtml" />
     <Content Include="Deelpagina%27s\ExamenData.cshtml" />
-    <Content Include="Deelpagina%27s\ExamenPunten.cshtml" />
+    <Content Include="Deelpagina%27s\PuntenOverzicht.cshtml" />
     <Content Include="Default.cshtml" />
     <Content Include="Shared\_Footer.cshtml" />
     <Content Include="Shared\_Layout.cshtml" />
